@@ -11,6 +11,8 @@
 %Document -jbig2 / -jbig2globals
 %Document -process-images
 %Document -pages -fast
+%Document -page-info changes
+%Document -png -jpeg -jbig2 by extension
 \documentclass{book}
 % Edit here to produce cpdfmanual.pdf, cpdflibmanual.pdf, pycpdfmanual.pdf,
 % dotnetcpdflibmanual.pdf, jcpdflibmanual.pdf jscpdflibmanual.pdf etc.
