@@ -24,8 +24,10 @@ Extended features:
 o -list-images-used[-json] extends -image-resolution
 o Use -raw with -extract-images to get PNMs
 o -extract-images can extract JBIG2 images and their globals
-o more PNGs - greyscale 1, 2, 4, 8, 16bpp and RGB 16bpp
+o More PNGs - greyscale 1, 2, 4, 8, 16bpp and RGB 16bpp
 o -pages -fast to print number of pages from /Count 
+o Report number of annotations in -page-info
+o Specify image based only on file extension
 
 Fixes:
 
